force-app/main/default/objects/Leave_Request__c/fields/Employee_Details__c.field-meta.xml
<CustomField>
    <fullName>Employee_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Details</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Leave Requests</relationshipLabel>
    <relationshipName>Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>