force-app/main/default/objects/Leave_Request__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <label>Request Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Earned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>