force-app/main/default/objects/Leave_Request__c/fields/Request_To__c.field-meta.xml
<CustomField>
    <fullName>Request_To__c</fullName>
    <label>Request To</label>
    <required>true</required>
    <type>Email</type>
</CustomField>