force-app/main/default/objects/Leave_Request__c/validationRules/Prevent_End_Date_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_End_Date_Before_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Start_Date__c)),
    NOT(ISBLANK(End_Date__c)),
    End_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorMessage>End Date cannot be earlier than Start Date.</errorMessage>
</ValidationRule>